--- a/part 1/index.html
+++ b/part 1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>My Name is ankush Das<br>
+    <p>My Name is Ankush Das<br>
     I am 18 years old
     <br>My Height is 5'8''<br>
 </p>
